data/derived/comb/progs/unify/prog1325.ml.out
Characters 113-131:
  if List.mem (h, seen)
     ^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list -> bool
       but an expression was expected of type bool
